convert Good NodeTree NodeTitle

--- a/src/main/resources/i18n/Strings_en.properties
+++ b/src/main/resources/i18n/Strings_en.properties
@@ -19,7 +19,7 @@ foreingcapital=foreing capital
 workplaces=workplaces
 brands=brands
 goods=goods
-branches=branches
+treeNodes=treeNodes
 checkdate=check date
 postalcode=postal code
 address=address
