--- a/src/main/resources/i18n/Strings_ru.properties
+++ b/src/main/resources/i18n/Strings_ru.properties
@@ -19,7 +19,7 @@ foreingcapital=иностранный капитал
 workplaces=число рабочих
 brands=бренды
 goods=товары
-branches=отрасли
+treeNodes=отрасли
 checkdate=дата проверки
 postalcode=почтовый код
 address=адресс
