added new words to i18n and sorting

--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -1,43 +1,44 @@
 # suppress inspection "UnusedProperty" for whole file
-treebranch=goods
-selected=selected
-home=home
-back=back
-forward=forward
-search=search
-advancedsearch‎=advanced search
-orderby=order by
-print=print
-export=export
-mail=email
-settings=settings
-result=result
-contactperson=contact person
-entitytype=type
-creation=creation date
-foreingcapital=foreing capital
-workplaces=workplaces
-brands=brands
-goods=goods
-treeNodes=treeNodes
-checkdate=check date
-postalcode=postal code
 address=address
-phones=phones
-faxes=fax
-emails=email
-urls=urls
-null=n/a
-true=yes
-false=no
-title=title
-creationdate=creation date
+advancedsearch‎=advanced search
+back=back
+brands=brands
 businessentitytype=business entity type
-registrationCode=registration code
+checkdate=check date
+contactperson=contact person
+creation=creation date
+creationdate=creation date
+emails=email
+entitytype=type
+export=export
+false=no
+faxes=fax
+foreingcapital=foreing capital
+forward=forward
+goods=goods
+home=home
+i_agree=i agree
+internet=internet
 licence=licence
+mail=email
+next=next
+null=n/a
+orderby=order by
+phone=phone
+phones=phones
+postalcode=postal code
+print=print
 register_by_internet=register by internet help
 register_by_phone=register by phone help
-phone=phone
-internet=internet
-i_agree=i agree
-next=next
+registrationCode=registration code
+result=result
+search=search
+selected=selected
+settings=settings
+title=title
+treebranch=goods
+treeNodes=treeNodes
+true=yes
+tag=add to selected
+urls=urls
+workplaces=workplaces
