--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -1,43 +1,44 @@
 # suppress inspection "UnusedProperty" for whole file
-treebranch=товары и услуги
-selected=избранное
-home=домой
-back=назад
-forward=вперед
-search=поиск
-advancedsearch‎=расширенный поиск
-orderby=упорядочить по
-print=печать
-export=экспорт
-mail=отправить
-settings=настройки
-result=найдено
-contactperson=контактное лицо
-entitytype=тип
-creation=дата создания
-foreingcapital=иностранный капитал
-workplaces=число рабочих
-brands=бренды
-goods=товары
-treeNodes=отрасли
-checkdate=дата проверки
-postalcode=почтовый код
 address=адресс
-phones=телефоны
-faxes=факс
-emails=email
-urls=www
-null=н/д
-true=да
-false=нет
-title=название
-creationdate=дата создания
+advancedsearch‎=расширенный поиск
+back=назад
+brands=бренды
 businessentitytype=тип собственности
-registrationCode=код регистарции
+checkdate=дата проверки
+contactperson=контактное лицо
+creation=дата создания
+creationdate=дата создания
+emails=email
+entitytype=тип
+export=экспорт
+false=нет
+faxes=факс
+foreingcapital=иностранный капитал
+forward=вперед
+goods=товары
+home=домой
+i_agree=я согласен
+internet=интернет
 licence=лицензия
+mail=отправить
+next=далее
+null=н/д
+orderby=упорядочить по
+phone=телефон
+phones=телефоны
+postalcode=почтовый код
+print=печать
 register_by_internet=регистр по инт
 register_by_phone=регистр по телефону
-phone=телефон
-internet=интернет
-i_agree=я согласен
-next=далее
+registrationCode=код регистарции
+result=найдено
+search=поиск
+selected=избранное
+settings=настройки
+title=название
+treebranch=товары и услуги
+treeNodes=отрасли
+true=да
+tag=добавить в избранное
+urls=www
+workplaces=число рабочих
