add context menu to tag panel

--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -42,3 +42,6 @@ true=да
 tag=добавить в избранное
 urls=www
 workplaces=число рабочих
+delete_tag=Удалить из избранного
+rename_tag=Переименовать
+rename_tag_message=Введите новое название
