--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -42,3 +42,9 @@ true=yes
 tag=add to selected
 urls=urls
 workplaces=workplaces
+contain=Contain
+not_contain=Not contain
+after=Greater
+before=Less
+equal=Equal
+not_equal=Not equal
