--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -45,3 +45,9 @@ workplaces=число рабочих
 delete_tag=Удалить из избранного
 rename_tag=Переименовать
 rename_tag_message=Введите новое название
+contain=Содержит
+not_contain=Не содержит
+after=Больше
+before=Меньше
+equal=Равно
+not_equal=Не равно
