added ProgressDialog + ExportDialog use ProgressDialog.start()

--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -49,3 +49,5 @@ before=Less
 equal=Equal
 not_equal=Not equal
 select_all=Select all
+i_from_size=Exported %d from %d enterprises
+wait_for_export=Wait
