--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -52,3 +52,5 @@ before=Меньше
 equal=Равно
 not_equal=Не равно
 select_all=Выбрать все
+i_from_size=Экспотрировано %d из %d предприятий
+wait_for_export=Подождите идет экспорт
