refactoring print Data fixing bugs

--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -54,3 +54,5 @@ not_equal=Не равно
 select_all=Выбрать все
 i_from_size=Экспотрировано %d из %d предприятий
 wait_for_export=Подождите идет экспорт
+print_header=Распечатано VaroDB
+
