--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -51,3 +51,4 @@ not_equal=Not equal
 select_all=Select all
 i_from_size=Exported %d from %d enterprises
 wait_for_export=Wait
+print_header=Printing VaroDB
