move print and preparation to new Activity; refactoring

--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -49,6 +49,11 @@ before=Less
 equal=Equal
 not_equal=Not equal
 select_all=Select all
-i_from_size=Exported %d from %d enterprises
+exported_i_from_size=Exported %d from %d enterprises
+prepared_i_from_size=Prepared %d from %d enterprises
 wait_for_export=Wait
 print_header=Printing VaroDB
+moldova=Republic Moldova
+print_prepare_progress=Print prepare progress
+printing_warning=Warning Print
+printing_done=Printing done
