--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -52,7 +52,12 @@ before=Меньше
 equal=Равно
 not_equal=Не равно
 select_all=Выбрать все
-i_from_size=Экспотрировано %d из %d предприятий
+exported_i_from_size=Экспотрировано %d из %d предприятий
+prepared_i_from_size=Подготовленно %d из %d предприятий
 wait_for_export=Подождите идет экспорт
 print_header=Распечатано VaroDB
+moldova=Республика Молдова
+print_prepare_progress=Подготовка к печати
+printing_warning=Печать может заненять некоторое время
+printing_done=Печать закончена
 
