--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -1,59 +1,86 @@
 # suppress inspection "UnusedProperty" for whole file
-address=address
-advancedsearch‎=advanced search
-back=back
-brands=brands
-businessentitytype=business entity type
-checkdate=check date
-contactperson=contact person
-creation=creation date
-creationdate=creation date
-emails=email
-entitytype=type
-export=export
-false=no
-faxes=fax
-foreingcapital=foreing capital
-forward=forward
-goods=goods
-home=home
-i_agree=i agree
-internet=internet
-licence=licence
-mail=email
-next=next
-null=n/a
-orderby=order by
-phone=phone
-phones=phones
-postalcode=postal code
-print=print
-register_by_internet=register by internet help
-register_by_phone=register by phone help
-registrationCode=registration code
-result=result
-search=search
-selected=selected
-settings=settings
-title=title
-treebranch=goods
-treeNodes=treeNodes
-true=yes
-tag=add to selected
-urls=urls
-workplaces=workplaces
-contain=Contain
-not_contain=Not contain
-after=Greater
-before=Less
-equal=Equal
-not_equal=Not equal
-select_all=Select all
-exported_i_from_size=Exported %d from %d enterprises
-prepared_i_from_size=Prepared %d from %d enterprises
-wait_for_export=Wait
-print_header=Printing VaroDB
-moldova=Republic Moldova
-print_prepare_progress=Print prepare progress
-printing_warning=Warning Print
-printing_done=Printing done
+address=
+advancedsearch‎=
+after=
+all=
+back=
+before=
+branch=
+branches=
+brands=
+businessentitytype=
+cancel=
+checkdate=
+contactperson=
+contain=
+country=
+creationdate=
+default=
+delete_tag=
+emails=
+enterprises=
+entitytype=
+equal=
+export-rows-choose=
+export=
+exported_i_from_size=
+false=
+faxes=
+fields=
+foreingcapital=
+forward=
+goods=
+home=
+i_agree=
+internet=
+language-choose=
+licence=
+mail=
+moldova=
+next=
+not_contain=
+not_equal=
+null=
+orderby=
+phone=
+phones=
+postalcode=
+prepared_i_from_size=
+print-preview=
+print-settings=
+print=
+print_header=
+print_prepare_progress=
+printing_done=
+printing_warning=
+region=
+register_by_internet=
+register_by_phone=
+registrationCode=
+rename_tag=
+rename_tag_message=
+result=
+search=
+sector=
+select_all=
+selected-only=
+selected=
+settings=
+street=
+streethouseoffice=
+tag=
+tag_add=
+title=
+titleContains=
+town=
+treebranch=
+treeNodes=
+true=
+type-address=
+type-data=
+urls=
+wait_for_export=
+workplaces<=
+workplaces=
+workplaces>=
+ypurl=
