--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -1,63 +1,87 @@
 # suppress inspection "UnusedProperty" for whole file
-address=адресс
-advancedsearch‎=расширенный поиск
-back=назад
-brands=бренды
-businessentitytype=тип собственности
-checkdate=дата проверки
-contactperson=контактное лицо
-creation=дата создания
-creationdate=дата создания
-emails=email
-entitytype=тип
-export=экспорт
-false=нет
-faxes=факс
-foreingcapital=иностранный капитал
-forward=вперед
-goods=товары
-home=домой
-i_agree=я согласен
-internet=интернет
-licence=лицензия
-mail=отправить
-next=далее
-null=н/д
-orderby=упорядочить по
-phone=телефон
-phones=телефоны
-postalcode=почтовый код
-print=печать
-register_by_internet=регистр по инт
-register_by_phone=регистр по телефону
-registrationCode=код регистарции
-result=найдено
-search=поиск
-selected=избранное
-settings=настройки
-title=название
-treebranch=товары и услуги
-treeNodes=отрасли
-true=да
-tag=добавить в избранное
-urls=www
-workplaces=число рабочих
+address=Адресс
+advancedsearch‎=Расширенный поиск
+after=Больше
+all=Все
+back=Назад
+before=Меньше
+branch=Отрасль
+branches=Отрасли
+brands=Бренды
+businessentitytype=Тип собственности
+cancel=Завершить
+checkdate=Дата проверки
+contactperson=Контактное лицо
+contain=Содержит
+country=Страна
+creationdate=Дата создания
+default=По умолчанию
 delete_tag=Удалить из избранного
+emails=Email
+enterprises=предприятия
+entitytype=Тип
+equal=Равно
+export-rows-choose=Экспортировать
+export=Экспорт
+exported_i_from_size=Экспотрировано %d из %d предприятий
+false=Нет
+faxes=Факс
+fields=Поля
+foreingcapital=Иностранный капитал
+forward=Вперед
+goods=Товары
+home=Домой
+i_agree=Я согласен
+internet=Интернет
+language-choose=Язык
+licence=Лицензия
+mail=Отправить
+moldova=Республика Молдова
+next=Далее
+not_contain=Не содержит
+not_equal=Не равно
+null=н/д
+orderby=Упорядочить по
+phone=Телефон
+phones=Телефоны
+postalcode=Почтовый код
+prepared_i_from_size=Подготовленно %d из %d предприятий
+print-preview=Предпросмотр
+print-settings=Настройки печати
+print=Печатать
+print_header=Распечатано VaroDB
+print_prepare_progress=Подготовка к печати
+printing_done=Печать закончена
+printing_warning=Печать может заненять некоторое время
+region=Регион
+register_by_internet=Регистрация по интернету
+register_by_phone=Регистрация по телефону
+registrationCode=Код регистарции
 rename_tag=Переименовать
 rename_tag_message=Введите новое название
-contain=Содержит
-not_contain=Не содержит
-after=Больше
-before=Меньше
-equal=Равно
-not_equal=Не равно
+result=Найдено
+search=Поиск
+sector=Сектор
 select_all=Выбрать все
-exported_i_from_size=Экспотрировано %d из %d предприятий
-prepared_i_from_size=Подготовленно %d из %d предприятий
+selected-only=Только выделенные
+selected=Избранное
+settings=Настройки
+street=Улица
+streethouseoffice=Аддресс
+tag=Добавить в избранное
+tag_add=Добавить в избранное
+title=Название
+titleContains=Название содержит
+town=Город
+treebranch=Товары и услуги
+treeNodes=Отрасли
+true=Да
+type-address=Печатать адресов для почтовой рассылки
+type-data=Печать данных предриятия
+urls=Сайт
 wait_for_export=Подождите идет экспорт
-print_header=Распечатано VaroDB
-moldova=Республика Молдова
-print_prepare_progress=Подготовка к печати
-printing_warning=Печать может заненять некоторое время
-printing_done=Печать закончена
+workplaces<=Колличество рабочих менее
+workplaces=Колличество рабочих
+workplaces>=Колличество рабочих более
+ypurl=Ссылка на страницу yellowpages.md
 
