--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -1,6 +1,4 @@
 # suppress inspection "UnusedProperty" for whole file
-address=Адресс
-advancedsearch‎=Расширенный поиск
 after=Больше
 all=Все
 back=Назад
@@ -8,7 +6,7 @@ before=Меньше
 branch=Отрасль
 branches=Отрасли
 brands=Бренды
-businessentitytype=Тип собственности
+businessentitytype=Организационно-правовая форма
 cancel=Завершить
 checkdate=Дата проверки
 contactperson=Контактное лицо
@@ -19,12 +17,10 @@ default=По умолчанию
 delete_tag=Удалить из избранного
 emails=Email
 enterprises=предприятия
-entitytype=Тип
 equal=Равно
 export-rows-choose=Экспортировать
 export=Экспорт
 exported_i_from_size=Экспотрировано %d из %d предприятий
-false=Нет
 faxes=Факс
 fields=Поля
 foreingcapital=Иностранный капитал
@@ -34,7 +30,6 @@ home=Домой
 i_agree=Я согласен
 internet=Интернет
 language-choose=Язык
-licence=Лицензия
 mail=Отправить
 moldova=Республика Молдова
 next=Далее
@@ -64,18 +59,15 @@ search=Поиск
 sector=Сектор
 select_all=Выбрать все
 selected-only=Только выделенные
-selected=Избранное
 settings=Настройки
 street=Улица
 streethouseoffice=Аддресс
-tag=Добавить в избранное
 tag_add=Добавить в избранное
+tag=Избранное
 title=Название
 titleContains=Название содержит
 town=Город
-treebranch=Товары и услуги
-treeNodes=Отрасли
-true=Да
+tree=Товары и услуги
 type-address=Печатать адресов для почтовой рассылки
 type-data=Печать данных предриятия
 urls=Сайт
