--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -1,86 +1,78 @@
 # suppress inspection "UnusedProperty" for whole file
-address=
-advancedsearch‎=
-after=
-all=
-back=
-before=
-branch=
-branches=
-brands=
-businessentitytype=
-cancel=
-checkdate=
-contactperson=
-contain=
-country=
-creationdate=
-default=
-delete_tag=
-emails=
-enterprises=
-entitytype=
-equal=
-export-rows-choose=
-export=
-exported_i_from_size=
-false=
-faxes=
-fields=
-foreingcapital=
-forward=
-goods=
-home=
-i_agree=
-internet=
-language-choose=
-licence=
-mail=
+after=After
+all=All
+back=Back
+before=Before
+branch=Branch
+branches=Branches
+brands=Brands
+businessentitytype=Types of business entity
+cancel=Cancel
+checkdate=Validation date
+contactperson=Contact person
+contain=Contain
+country=Country
+creationdate=Creation date
+default=Default
+delete_tag=Remove from selection
+emails=Email
+enterprises=enterprises
+equal=Equal
+export-rows-choose=Export
+export=Export
+exported_i_from_size=Exported %d from %d
+faxes=Fax
+fields=Fields
+foreingcapital=Foreing capital
+forward=Forward
+goods=Goods
+home=Home
+i_agree=I agree
+internet=Internet
+language-choose=Choose language
+mail=Mail
 moldova=Republic Moldova
-next=
-not_contain=
-not_equal=
-null=
-orderby=
-phone=
-phones=
-postalcode=
-prepared_i_from_size=
-print-preview=
-print-settings=
-print=
-print_header=
-print_prepare_progress=
-printing_done=
-printing_warning=
-region=
-register_by_internet=
-register_by_phone=
-registrationCode=
-rename_tag=
-rename_tag_message=
-result=
-search=
-sector=
-select_all=
-selected-only=
-selected=
-settings=
-street=
-streethouseoffice=
-tag=
-tag_add=
-title=
-titleContains=
-town=
-treebranch=
-treeNodes=
-true=
-type-address=
-type-data=
-urls=
-wait_for_export=
-workplaces<=
-workplaces=
-workplaces>=
-ypurl=
+next=Next
+not_contain=Not contain
+not_equal=Not equal
+null=N/A
+orderby=Order by
+phone=Phone
+phones=Phones
+postalcode=Postal code
+prepared_i_from_size=Prepared %d from %d
+print-preview=Print preview
+print-settings=Print Settings
+print=Print
+print_header=Printed by VaroDB
+print_prepare_progress=Print preparation
+printing_done=Printing done
+printing_warning=Printing may take some time
+region=Region
+register_by_internet=Register by internet
+register_by_phone=Register by phone
+registrationCode=Registration code
+rename_tag=Rename selection
+rename_tag_message=Enter new name
+result=Result
+search=Search
+sector=Sector
+select_all=Select all
+selected-only=Only selected
+settings=Settings
+street=Street
+streethouseoffice=Address
+tag_add=Add tag
+tag=Selection
+title=Title
+titleContains=Title contains
+town=Town
+tree=Goods and services
+type-address=Address
+type-data=Enterprise data
+urls=WWW
+wait_for_export=Wait
+workplaces<=Workplaces less
+workplaces=Workplaces
+workplaces>=Workplaces greater
+ypurl=Link to YP.md
