added placeholder to autocompletefield

--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -76,3 +76,5 @@ workplaces<=Workplaces less
 workplaces=Workplaces
 workplaces>=Workplaces greater
 ypurl=Link to YP.md
+filter_tree=Enter word
+enter_tag=Enter word
