--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -76,4 +76,6 @@ workplaces<=Колличество рабочих менее
 workplaces=Колличество рабочих
 workplaces>=Колличество рабочих более
 ypurl=Ссылка на страницу yellowpages.md
+filter_tree=Введите слово
+enter_tag=Введите название
 
