added empty not empty filter to filters

--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -78,3 +78,5 @@ workplaces>=Workplaces greater
 ypurl=Link to YP.md
 filter_tree=Enter word
 enter_tag=Enter word
+empty=Empty
+not_empty=Not empty
