--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -78,4 +78,6 @@ workplaces>=Колличество рабочих более
 ypurl=Ссылка на страницу yellowpages.md
 filter_tree=Введите слово
 enter_tag=Введите название
+empty=Пустое
+not_empty=Не пустое
 
