added new string show_text_in_button

--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -31,7 +31,7 @@ i_agree=I agree
 internet=Internet
 language-choose=Choose language
 mail=Mail
-moldova=Republic Moldova
+moldova=Republic of Moldova
 next=Next
 not_contain=Not contain
 not_equal=Not equal
@@ -80,3 +80,4 @@ filter_tree=Enter word
 enter_tag=Enter word
 empty=Empty
 not_empty=Not empty
+show_text_in_button=Show text in button
