--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -80,4 +80,5 @@ filter_tree=Введите слово
 enter_tag=Введите название
 empty=Пустое
 not_empty=Не пустое
+show_text_in_button=Показвать текст в кнопках
 
