added new words

--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -61,7 +61,7 @@ select_all=Выбрать все
 selected-only=Только выделенные
 settings=Настройки
 street=Улица
-streethouseoffice=Аддресс
+streethouseoffice=Адрес
 tag_add=Добавить в избранное
 tag=Избранное
 title=Название
@@ -83,4 +83,6 @@ not_empty=Не пустое
 show_text_in_button=Показвать текст в кнопках
 false=Нет
 true=Да
+remove_filter=Удалить фильтр
+address=Адрес
 
