filter refactoring create inputDialog

--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -85,3 +85,6 @@ false=No
 true=Yes
 remove_filter=Remove filter
 address=Address
+wrong-data-format-message=Data myst by in format dd/mm/yy
+copy=Copy
+filter-by=Show records where "%s" %s
