--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -85,4 +85,6 @@ false=Нет
 true=Да
 remove_filter=Удалить фильтр
 address=Адрес
-
+wrong-data-format-message=Дата должна быть в формате dd/mm/yy
+copy=Копировать
+filter-by=Показать записи где "%s" %s
