--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -88,3 +88,5 @@ address=Address
 wrong-data-format-message=Data myst by in format dd/mm/yy
 copy=Copy
 filter-by=Show records where "%s" %s
+sorter-dialog-message=Wait...
+activity-dialog-title=
