--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -88,3 +88,5 @@ address=Адрес
 wrong-data-format-message=Дата должна быть в формате dd/mm/yy
 copy=Копировать
 filter-by=Показать записи где "%s" %s
+sorter-dialog-message=Ждите...
+activity-dialog-title=
