--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -6,7 +6,7 @@ before=Before
 branch=Branch
 branches=Branches
 brands=Brands
-businessentitytype=Types of business entity
+businessentitytype=Форма собственности
 cancel=Cancel
 checkdate=Validation date
 contactperson=Contact person
