--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -6,7 +6,7 @@ before=Меньше
 branch=Отрасль
 branches=Отрасли
 brands=Бренды
-businessentitytype=Организационно-правовая форма
+businessentitytype=Форма собственности
 cancel=Завершить
 checkdate=Дата проверки
 contactperson=Контактное лицо
