added delay to ActivityDialog.start

--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -90,3 +90,4 @@ copy=Copy
 filter-by=Show records where "%s" %s
 sorter-dialog-message=Wait...
 activity-dialog-title=
+search-wait-dialog-message=Wait...
