--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -88,5 +88,6 @@ address=Адрес
 wrong-data-format-message=Дата должна быть в формате dd/mm/yy
 copy=Копировать
 filter-by=Показать записи где "%s" %s
-sorter-dialog-message=Ждите...
+sorter-dialog-message=Идет поиск...
 activity-dialog-title=
+search-wait-dialog-message=Идет поиск...
