--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -48,7 +48,7 @@ print_header=Распечатано VaroDB
 print_prepare_progress=Подготовка к печати
 printing_done=Печать закончена
 printing_warning=Печать может заненять некоторое время
-region=Регион
+region=Райнон/Муниципий
 register_by_internet=Регистрация по интернету
 register_by_phone=Регистрация по телефону
 registrationCode=Код регистарции
@@ -56,7 +56,7 @@ rename_tag=Переименовать
 rename_tag_message=Введите новое название
 result=Найдено
 search=Поиск
-sector=Сектор
+sector=Регион
 select_all=Выбрать все
 selected-only=Только выделенные
 settings=Настройки
@@ -66,7 +66,7 @@ tag_add=Добавить в избранное
 tag=Избранное
 title=Название
 titleContains=Название содержит
-town=Город
+town=Населенный пункт
 tree=Товары и услуги
 type-address=Печатать адресов для почтовой рассылки
 type-data=Печать данных предриятия
