refactoring status bar

--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -54,7 +54,6 @@ register_by_phone=Register by phone
 registrationCode=Registration code
 rename_tag=Rename selection
 rename_tag_message=Enter new name
-result=Result
 search=Search
 sector=Sector
 select_all=Select all
@@ -91,3 +90,5 @@ filter-by=Show records where "%s" %s
 sorter-dialog-message=Wait...
 activity-dialog-title=
 search-wait-dialog-message=Wait...
+total_rows=Total rows
+current_row=Current row
