--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -54,7 +54,6 @@ register_by_phone=Регистрация по телефону
 registrationCode=Код регистарции
 rename_tag=Переименовать
 rename_tag_message=Введите новое название
-result=Найдено
 search=Поиск
 sector=Регион
 select_all=Выбрать все
@@ -91,3 +90,5 @@ filter-by=Показать записи где "%s" %s
 sorter-dialog-message=Идет поиск...
 activity-dialog-title=
 search-wait-dialog-message=Идет поиск...
+total_rows=Найдено
+current_row=Текущая строка
