sort to ActivityDialog

--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -92,3 +92,6 @@ activity-dialog-title=
 search-wait-dialog-message=Wait...
 total_rows=Total rows
 current_row=Current row
+filter_text_format=Sort column [%s] %s
+ascending=ascending
+descending=descending
