--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -92,3 +92,6 @@ activity-dialog-title=
 search-wait-dialog-message=Идет поиск...
 total_rows=Найдено
 current_row=Текущая строка
+filter_text_format=Сортировать столбец [%s] %s
+ascending=по возрастанию
+descending=по убыванию
