--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -95,3 +95,4 @@ current_row=Current row
 filter_text_format=Sort column [%s] %s
 ascending=ascending
 descending=descending
+row_sorting_message=Sort...
