--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -95,3 +95,4 @@ current_row=Текущая строка
 filter_text_format=Сортировать столбец [%s] %s
 ascending=по возрастанию
 descending=по убыванию
+row_sorting_message=Идет сортировка...
