--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -66,7 +66,7 @@ tag=Selection
 title=Title
 titleContains=Title contains
 town=Town
-tree=Goods and services
+tree=Rubrics
 type-address=Address
 type-data=Enterprise data
 urls=WWW
@@ -75,7 +75,7 @@ workplaces<=Workplaces less
 workplaces=Workplaces
 workplaces>=Workplaces greater
 ypurl=Link to YP.md
-filter_tree=Enter word
+filter_tree=Show rubrics start with...
 enter_tag=Enter word
 empty=Empty
 not_empty=Not empty
