--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -66,7 +66,7 @@ tag=Избранное
 title=Название
 titleContains=Название содержит
 town=Населенный пункт
-tree=Товары и услуги
+tree=Рубрики
 type-address=Печатать адресов для почтовой рассылки
 type-data=Печать данных предриятия
 urls=Сайт
@@ -75,7 +75,7 @@ workplaces<=Колличество рабочих менее
 workplaces=Колличество рабочих
 workplaces>=Колличество рабочих более
 ypurl=Ссылка на страницу yellowpages.md
-filter_tree=Введите слово
+filter_tree=Показать рубрику начинающуюся с...
 enter_tag=Введите название
 empty=Пустое
 not_empty=Не пустое
