--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -96,3 +96,4 @@ filter_text_format=Sort column [%s] %s
 ascending=ascending
 descending=descending
 row_sorting_message=Sort...
+close_window_message=Close window message
