--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -75,7 +75,7 @@ workplaces<=Колличество рабочих менее
 workplaces=Колличество рабочих
 workplaces>=Колличество рабочих более
 ypurl=Ссылка на страницу yellowpages.md
-filter_tree=Показать рубрику начинающуюся с...
+filter_tree=Показать рубрику, начинающуюся с...
 enter_tag=Введите название
 empty=Пустое
 not_empty=Не пустое
@@ -96,3 +96,4 @@ filter_text_format=Сортировать столбец [%s] %s
 ascending=по возрастанию
 descending=по убыванию
 row_sorting_message=Идет сортировка...
+close_window_message=Идет подготовка к закрытию программы...
