security package refactoring

--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -97,3 +97,9 @@ ascending=ascending
 descending=descending
 row_sorting_message=Sort...
 close_window_message=Close window message
+response_error_message=По техническим причинам вы не можете зарегистрироваться через интернет \
+  повторите попытку позже или попробуйте зарегистрироваться по телефону
+request_error_message=Ошибка связи. Проверте сеть и попытайтесь еще раз или попробуйте зарегистрироваться по телефону
+by_phone=phone
+by_internet=internet
+registration=registration by:
