--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -28,7 +28,6 @@ forward=Вперед
 goods=Товары
 home=Домой
 i_agree=Я согласен
-internet=Интернет
 language-choose=Язык
 mail=Отправить
 moldova=Республика Молдова
@@ -50,7 +49,7 @@ printing_done=Печать закончена
 printing_warning=Печать может заненять некоторое время
 region=Райнон/Муниципий
 register_by_internet=Регистрация по интернету
-register_by_phone=Регистрация по телефону
+register_by_phone=Регистрация по телефону. Позвоните по номеру 555-123 и прочитайте код регистрации  оператору
 registrationCode=Код регистарции
 rename_tag=Переименовать
 rename_tag_message=Введите новое название
@@ -97,3 +96,9 @@ ascending=по возрастанию
 descending=по убыванию
 row_sorting_message=Идет сортировка...
 close_window_message=Идет подготовка к закрытию программы...
+response_error_message=По техническим причинам вы не можете зарегистрироваться через интернет \
+  повторите попытку позже или попробуйте зарегистрироваться по телефону
+request_error_message=Ошибка связи. Проверте сеть и попытайтесь еще раз или попробуйте зарегистрироваться по телефону
+by_phone=телефону
+by_internet=интернету
+registration=Зарегистрировать по:
