refactoring Error messages +i18n

--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -96,9 +96,12 @@ ascending=по возрастанию
 descending=по убыванию
 row_sorting_message=Идет сортировка...
 close_window_message=Идет подготовка к закрытию программы...
-response_error_message=По техническим причинам вы не можете зарегистрироваться через интернет \
+server_error=По техническим причинам вы не можете зарегистрироваться через интернет \
   повторите попытку позже или попробуйте зарегистрироваться по телефону
-request_error_message=Ошибка связи. Проверте сеть и попытайтесь еще раз или попробуйте зарегистрироваться по телефону
+connection_error=Ошибка связи. Проверте сеть и попытайтесь еще раз или попробуйте зарегистрироваться по телефону
 by_phone=телефону
 by_internet=интернету
 registration=Зарегистрировать по:
+invalid_uid=Номер лицензии не верен.
+key_not_exist=Программа не зарегистрированна. Пройти регистрацию.
+validation_error=Ключ введен не верно. Повторите ввод еще раз или попробуйте зарегистрироваться по телефону
