--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -97,9 +97,12 @@ ascending=ascending
 descending=descending
 row_sorting_message=Sort...
 close_window_message=Close window message
-response_error_message=По техническим причинам вы не можете зарегистрироваться через интернет \
+server_error=По техническим причинам вы не можете зарегистрироваться через интернет \
   повторите попытку позже или попробуйте зарегистрироваться по телефону
-request_error_message=Ошибка связи. Проверте сеть и попытайтесь еще раз или попробуйте зарегистрироваться по телефону
+connection_error=Ошибка связи. Проверте сеть и попытайтесь еще раз или попробуйте зарегистрироваться по телефону
 by_phone=phone
 by_internet=internet
 registration=registration by:
+invalid_uid=Номер лицензии не верен.
+key_not_exist=Программа не зарегистрированна. Пройти регистрацию.
+validation_error=Ключ введен не верно. Повторите ввод еще раз или попробуйте зарегистрироваться по телефону
