added decrypt error

--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -106,3 +106,4 @@ registration=registration by:
 invalid_uid=Номер лицензии не верен.
 key_not_exist=Программа не зарегистрированна. Пройти регистрацию.
 validation_error=Ключ введен не верно. Повторите ввод еще раз или попробуйте зарегистрироваться по телефону
+decrypt_error=Регистрационный код не верен
