--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -105,3 +105,4 @@ registration=Зарегистрировать по:
 invalid_uid=Номер лицензии не верен.
 key_not_exist=Программа не зарегистрированна. Пройти регистрацию.
 validation_error=Ключ введен не верно. Повторите ввод еще раз или попробуйте зарегистрироваться по телефону
+decrypt_error=Регистрационный код не верен
