--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -103,6 +103,7 @@ by_phone=телефону
 by_internet=интернету
 registration=Зарегистрировать по:
 invalid_uid=Номер лицензии не верен.
-key_not_exist=Программа не зарегистрированна. Пройти регистрацию.
+unregistered_program_error=Программа не зарегистрированна. Пройти регистрацию.
 validation_error=Ключ введен не верно. Повторите ввод еще раз или попробуйте зарегистрироваться по телефону
 decrypt_error=Регистрационный код не верен
+expired_uid=Истек срок лицензии или колличество устоновок превышено
