--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -104,6 +104,7 @@ by_phone=phone
 by_internet=internet
 registration=registration by:
 invalid_uid=Номер лицензии не верен.
-key_not_exist=Программа не зарегистрированна. Пройти регистрацию.
+unregistered_program_error=Программа не зарегистрированна. Пройти регистрацию.
 validation_error=Ключ введен не верно. Повторите ввод еще раз или попробуйте зарегистрироваться по телефону
 decrypt_error=Регистрационный код не верен
+expired_uid=Истек срок лицензии или колличество устоновок превышено
