--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -110,3 +110,5 @@ decrypt_error=Регистрационный код не верен
 expired_uid=Истек срок лицензии или колличество устоновок превышено
 updated-message=%s updated %s enterprises
 term_expired=Истек срок лицензии
+update_progress_message=Идет обновление. Не закрывайте окно!
+updates_exists_message=Есть обновления. Установить?
