--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -109,3 +109,5 @@ decrypt_error=Регистрационный код не верен
 expired_uid=Истек срок лицензии или колличество устоновок превышено
 updated-message=%s обновлено %s предприятий
 term_expired=Истек срок лицензии
+update_progress_message=Идет обновление. Не закрывайте окно!
+updates_exists_message=Есть обновления. Установить?
