create proxy panel. For proxy settings

--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -112,3 +112,9 @@ updated-message=%s updated %s enterprises
 term_expired=Истек срок лицензии
 update_progress_message=Идет обновление. Не закрывайте окно!
 updates_exists_message=Есть обновления. Установить?
+use_proxy_label=Use Proxy?
+proxy_label=Proxy
+proxy_port_label=Port
+proxy_login_label=Login
+proxy_password_label=Password
+proxy_settings_title=Proxy-server settings
