--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -111,3 +111,9 @@ updated-message=%s обновлено %s предприятий
 term_expired=Истек срок лицензии
 update_progress_message=Идет обновление. Не закрывайте окно!
 updates_exists_message=Есть обновления. Установить?
+use_proxy_label=Использовать Proxy?
+proxy_label=Proxy
+proxy_port_label=Port
+proxy_login_label=Логин
+proxy_password_label=Пароль
+proxy_settings_title=Настройки Proxy-сервера
