set filter. For proxy port settings

--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -117,3 +117,4 @@ proxy_port_label=Port
 proxy_login_label=Логин
 proxy_password_label=Пароль
 proxy_settings_title=Настройки Proxy-сервера
+interface_settings=Настройки интерфейса
