--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -118,3 +118,4 @@ proxy_port_label=Port
 proxy_login_label=Login
 proxy_password_label=Password
 proxy_settings_title=Proxy-server settings
+interface_settings=Interface setting
