add about dialog

--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -119,3 +119,5 @@ proxy_login_label=Login
 proxy_password_label=Password
 proxy_settings_title=Proxy-server settings
 interface_settings=Interface setting
+about=About
+help=Help
