--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -118,3 +118,5 @@ proxy_login_label=Логин
 proxy_password_label=Пароль
 proxy_settings_title=Настройки Proxy-сервера
 interface_settings=Настройки интерфейса
+about=О программе
+help=Помощь
