--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -120,3 +120,4 @@ proxy_settings_title=Настройки Proxy-сервера
 interface_settings=Настройки интерфейса
 about=О программе
 help=Помощь
+idno=Фискальный код
