optimization startup time

--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -122,3 +122,5 @@ interface_settings=Interface setting
 about=About
 help=Help
 idno=IDNO
+JDBCConnectionException=Cannot connect to database
+cache_update_message=Wait...
