--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -121,3 +121,5 @@ interface_settings=Настройки интерфейса
 about=О программе
 help=Помощь
 idno=Фискальный код
+JDBCConnectionException=Ошибка соединения с базой данных
+cache_update_message=Ждите..ю
