fixing wrong password and database in use check

--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -124,3 +124,4 @@ help=Help
 idno=IDNO
 JDBCConnectionException=Cannot connect to database
 cache_update_message=Wait...
+database_may_be_already_in_use=database may be already in use
