--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -123,3 +123,4 @@ help=Помощь
 idno=Фискальный код
 JDBCConnectionException=Ошибка соединения с базой данных
 cache_update_message=Ждите..ю
+database_may_be_already_in_use=База данных уже открыта
