--- a/external-resources/i18n/Strings_en.properties
+++ b/external-resources/i18n/Strings_en.properties
@@ -1,6 +1,6 @@
 # suppress inspection "UnusedProperty" for whole file
 after=After
-all=All
+all_check_box_text=All
 back=Back
 before=Before
 branch=Branch
@@ -16,9 +16,8 @@ creationdate=Creation date
 default=Default
 delete_tag=Remove from selection
 emails=Email
-enterprises=enterprises
 equal=Equal
-export-rows-choose=Export
+rows_choose_panel_title=Export
 export=Export
 exported_i_from_size=Exported %d from %d
 faxes=Fax
@@ -29,7 +28,7 @@ goods=Goods
 home=Home
 i_agree=I agree
 internet=Internet
-language-choose=Choose language
+language_choose_panel_title=Choose language
 mail=Mail
 moldova=Republic of Moldova
 next=Next
@@ -51,13 +50,13 @@ printing_warning=Printing may take some time
 region=Region
 register_by_internet=Register by internet
 register_by_phone=Register by phone
-registrationCode=Registration code
+registration_code=Registration code
 rename_tag=Rename selection
 rename_tag_message=Enter new name
 search=Search
 sector=Sector
 select_all=Select all
-selected-only=Only selected
+selected_only_check_box_text=Only selected (%s) enterprises
 settings=Settings
 street=Street
 streethouseoffice=Address
@@ -76,7 +75,7 @@ workplaces=Workplaces
 workplaces>=Workplaces greater
 ypurl=Link to YP.md
 filter_tree=Show rubrics start with...
-enter_tag=Enter word
+tag_placeholder=Enter word
 empty=Empty
 not_empty=Not empty
 show_text_in_button=Show text in button
@@ -86,8 +85,8 @@ remove_filter=Remove filter
 address=Address
 wrong-data-format-message=Data myst by in format dd/mm/yy
 copy=Copy
-filter-by=Show records where "%s" %s
-sorter-dialog-message=Wait...
+filter_input_message_format=Show records where "%s" %s
+row_sorter_dialog_message=Wait...
 activity-dialog-title=
 search-wait-dialog-message=Wait...
 total_rows=Total rows
