show root to branchTree

--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -109,3 +109,4 @@ idno=Фискальный код
 JDBCConnectionException=Ошибка соединения с базой данных
 cache_update_message=Ждите...
 database_may_be_already_in_use=База данных уже открыта
+root=Все данные
