--- a/external-resources/i18n/Strings_ru.properties
+++ b/external-resources/i18n/Strings_ru.properties
@@ -31,21 +31,18 @@ next=Далее
 not_contain=Не содержит
 not_equal=Не равно
 null=н/д
-orderby=Упорядочить по
-phone=Телефон
-phones=Телефоны
-postalcode=Почтовый код
+phones=Телефон
+postalcode=Почтовый индекс
 prepared_i_from_size=Подготовленно %d из %d предприятий
 print-preview=Предпросмотр
 print-settings=Настройки печати
 print=Печатать
-print_header=Распечатано VaroDB
+print_header=Распечатано RMDB
 print_prepare_progress=Подготовка к печати
 printing_done=Печать закончена
 printing_warning=Печать может заненять некоторое время
 region=Райнон/Муниципий
-register_by_internet=Регистрация по интернету
-register_by_phone=Регистрация по телефону. Позвоните по номеру 555-123 и прочитайте код регистрации  оператору
+register_by_phone=Свяжитесь с нами по телефону 022-73-77-94 или inform@varo-inform.com и сообщите код регистрации
 registration_code=Код регистарции
 rename_tag=Переименовать
 rename_tag_message=Введите новое название
